FINISHED WITH 90% PERFORMANCE

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Ananthu M A</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,6 +26,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
 
   <!-- =======================================================
   * Template Name: iPortfolio
@@ -46,13 +48,13 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/IMG_0564.JPG" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/dp.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ananthu M A</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://wa.me/+919539272385" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://instagram.com/ananthu__m_a?igshid=MzRlODBiNWFlZA==" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/ananthuma/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/Ananthu-M-A" class="github"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -74,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ananthu M A</h1>
-      <p>I'm <span class="typed" data-typed-items="MERN Stack Developer ,IT Support Professional, Freelancer ,Artist"></span></p>
+      <p><span>Software Developer></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -92,7 +94,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4">
             <img src="assets/img/dp.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
@@ -350,32 +352,32 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
         <div class="icon"><img src="assets/img/whatsapp.png" alt="" width="30px"></div>
-        <h4 class="title"><a href="">+91 8137981961</a></h4>
+        <h4 class="title"><a href="https://wa.me/+919539272385">+91 9539272385</a></h4>
         <p class="description">Replay with in no time</p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
         <div class="icon"><div class="icon"><img src="assets/img/instagram.png" alt="" width="30px"></div></div>
-        <h4 class="title"><a href="">ananthu__m_a</a></h4>
+        <h4 class="title"><a href="https://instagram.com/ananthu__m_a?igshid=MzRlODBiNWFlZA==">ananthu__m_a</a></h4>
         <p class="description">Visit my personal account in instagram</p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
         <div class="icon"><div class="icon"><img src="assets/img/linkedin.png" alt="" width="30px"></div></div>
-        <h4 class="title"><a href="">Ananthu M A</a></h4>
+        <h4 class="title"><a href="https://www.linkedin.com/in/ananthuma/">Ananthu M A</a></h4>
         <p class="description">Go through my proffessional & educational history</p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
         <div class="icon"><div class="icon"><img src="assets/img/github.png" alt="" width="30px"></div></div>
-        <h4 class="title"><a href="">Ananthu-M-A</a></h4>
+        <h4 class="title"><a href="https://github.com/Ananthu-M-A">Ananthu-M-A</a></h4>
         <p class="description">Travel through my developing skills</p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
         <div class="icon"><div class="icon"><img src="assets/img/icons8-website-48.png" alt="" width="30px"></div></div>
-        <h4 class="title"><a href="">Ananthu M A</a></h4>
+        <h4 class="title"><a href="#">Ananthu M A</a></h4>
         <p class="description">Tour to my webite  </p>
       </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
         <div class="icon"><div class="icon"><img src="assets/img/email.png" alt="" width="30px"></div></div>
-        <h4 class="title"><a href="">ananthumapookkad@gmail.com</a></h4>
+        <h4 class="title"><a href="mailto:ananthumapookkad@gmail.com">ananthumapookkad@gmail.com</a></h4>
         <p class="description">For mail querries</p>
       </div>
 
@@ -494,26 +496,50 @@
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form>
+          <div class="col-lg-7 mt-5 mt-lg-0 align-items-stretch">
+            <form id="submit-form" onsubmit="validateForm(event)" class="needs-validation" novalidate>
+              <!-- Form fields -->
               <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name">
-              </div>
+                <label for="validationServer01" class="form-label">Name</label>
+                <input type="text" name="Name" class="form-control is-valid" id="validationServer01" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email">
-              </div>
+                <label for="validationServer02" class="form-label">Email</label>
+                <input type="email" name="Email" class="form-control is-valid" id="validationServer02" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
               <div class="mb-3">
-                <label for="phone" class="form-label">Mobile</label>
-                <input type="number" class="form-control" id="phone">
+                <label for="validationServer03" class="form-label">Mobile</label>
+                <input type="tel" name="Mobile" class="form-control is-valid" id="validationServer03" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div><div class="mb-3">
+                <label for="validationServer04" class="form-label">Purpose of Contact</label>
+                <input type="text" name="Purpose of Contact" class="form-control is-valid" id="validationServer04" required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              <div class="col-12">
+                <div class="form-check">
+                  <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+                  <label class="form-check-label" for="invalidCheck3">
+                    Agree to terms and conditions
+                  </label>
+                  <div id="invalidCheck3Feedback" class="invalid-feedback">
+                    You must agree before submitting.
+                  </div>
+                </div>
               </div>
-              <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <div class="col-12">
+                <button class="btn btn-primary" type="submit">Submit form</button>
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            
+                        
           </div>
 
         </div>
@@ -551,10 +577,30 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+<script>
+  $("#submit-form").submit((e)=>{
+      e.preventDefault()
+      $.ajax({
+          url:"https://script.google.com/macros/s/AKfycbzE9PbPYlXTEP_EPIqoBltWe06xKTlrXn3MKylppo5bMig4GLBQtNSA-2Wy86tNsjFO/exec",
+          data:$("#submit-form").serialize(),
+          method:"post",
+          success:function (response){
+              alert("Form submitted successfully")
+              window.location.reload()
+              //window.location.href="https://google.com"
+          },
+          error:function (err){
+              alert("Something Error")
 
+          }
+      })
+  })
+</script>
 </body>
 
 </html>
