--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/dp.jpg" rel="icon">
+  <link href="assets/img/dp.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -33,7 +33,7 @@
 
   <!-- =======================================================
   * Template Name: iPortfolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+  * Updated: June 21 2024 with Bootstrap v5.2.3
   * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -629,32 +629,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <script>
-    (function () {
-      'use strict';
-      window.addEventListener('load', function () {
-        let forms = document.getElementsByClassName('needs-validation');
-        let validation = Array.prototype.filter.call(forms, function (form) {
-          form.addEventListener('submit', function (event) {
-            if (form.checkValidity() === false) {
-              event.preventDefault();
-              event.stopPropagation();
-            }  else {
-            event.preventDefault();
-            var formData = new FormData(form);
-            var formDetails = {};
-            formData.forEach(function(value, key){
-                formDetails[key] = value;
-            });
-            console.log(formDetails);
-          }
-            form.classList.add('was-validated');
-          }, false);
-        });
-      }, false);
-    })();
-  </script>
-
 </body>
 
 </html>
